terraform/modules/compute/eks.tf
# Service Account for ALB Controller
resource "kubernetes_service_account" "alb_controller" {
    metadata {
      name = "aws-load-balancer-controller"
      namespace = "kube-system"
      annotations = {
        "eks.amazonaws.com/role-arn" = var.eks_service_account_role_arn
      }
    }
}

# Install ALB Controller using HELM
resource "helm_release" "alb_controller" {
    name = "aws-load-balancer-controller"
    repository = "https://aws.github.io/eks-charts"
    chart = "aws-load-balancer-controller"
    namespace = "kube-system"
    
    set {
        name = "clusterName"
        value = var.cluster_name
    }

    set {
        name = "serviceAccount.create"
        value = "false"
    }

    set {
        name = "serviceAccount.name"
        value = kubernetes_service_account.alb_controller.metadata[0].name
    }
}
